# note_app

./: .gitignore  LICENSE  README.md  docker-compose  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  notes.py  sharing.py
backend/app/auth/: security.py
backend/app/core/: config.py  exceptions.py
backend/app/crud/: base.py  note.py  user.py
backend/app/db/: base_class.py  init_db.py  session.py
backend/app/models/: note.py  user.py
backend/app/schemas/: note.py  token.py  user.py
frontend/: .env.local.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/components/auth/: LoginForm.js  RegisterForm.js
frontend/src/components/common/: InputField.js  Notification.js
frontend/src/components/layout/: Header.js  Layout.js
frontend/src/components/notes/: NoteCard.js  NoteFilter.js  NoteForm.js  SearchBar.js
frontend/src/contexts/: AuthContext.js
frontend/src/hooks/: useAuth.js
frontend/src/lib/: api.js  utils.js
frontend/src/pages/: _app.js  _document.js  index.js  login.js  register.js
frontend/src/pages/notes/: [id].js  create.js  index.js
frontend/src/pages/notes/[id]/: edit.js
frontend/src/pages/public/: [token_or_id].js
frontend/src/services/: noteService.js
frontend/src/styles/: variables.css
